--- a/css/crudStyle.css
+++ b/css/crudStyle.css
@@ -15,18 +15,27 @@ h1 {
 
 table {
   border-spacing: 0px;
-  width: 90vw;
+  width: 95vw;
   border-bottom: 3px outset var(--table-head-color);
   box-shadow: -1px 1px 2px 2px var(--box-shadow-color);
   margin: auto;
+  font-family: sans-serif;
 }
 
 th {
-  background-image: linear-gradient(#c3d4ff, var(--table-head-color));
+  background: linear-gradient(#c3d4ff, var(--table-head-color));
 }
 
 dialog {
-  background-image: linear-gradient(rgb(251, 241, 227), rgb(254, 248, 239));
+  /* Makes popup in the center of the screen */
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+
+  background: linear-gradient(rgb(251, 241, 227), rgb(254, 248, 239));
   box-shadow: -1px 1px 2px 2px var(--box-shadow-color);
   transition: box-shadow 0.3s ease;
 }
@@ -43,6 +52,13 @@ img[src="images/banner.webp"] {
   height: 15px;
 }
 
+main > button {
+  margin-left: 2vw;
+  width: 130px;
+  height: 40px;
+  font-size: 1.25em;
+}
+
 button {
   border: 1px solid black;
   border-radius: 6px;
@@ -57,6 +73,11 @@ button:hover {
   color: white;
 }
 
+header h1 {
+  margin-left: 2vw;
+  font-size: 2.5em;
+}
+
 dialog input, dialog textarea {
   margin-top: 10px;
   box-shadow: -1px 1px 2px 2px var(--box-shadow-color);
@@ -65,6 +86,11 @@ dialog input, dialog textarea {
 
 dialog input:hover, dialog textarea:hover {
   box-shadow: 0px 0px 6px 3px var(--box-shadow-color);
+}
+
+/* Makes the title column have a max width */
+table tbody tr td:nth-child(1) {
+  max-width: 28vw;
 }
 
 /* Makes the summary column have a max width */
