--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
+  min-height: 100vh;
 }
 
 header {
@@ -108,6 +109,8 @@ main {
   display: flex;
   flex-direction: column;
   flex: 1 1 0;
+  margin: 0;
+  background: linear-gradient(white, rgb(255, 250, 244));
 }
 
 .navBar {
